--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           <!-- banner start  -->
           <div class="mb-5 bg-[url('./images/banner.png')] bg-no-repeat bg-center bg-cover h-[550px] rounded-2xl">
             <div class="text-center space-y-6">
-                <h1 class="lg:text-6xl text-[30px] font-extrabold text-white pt-[80px]">End-to-End Travel with <br> <span class="text-[#1DD100]">B Paribahan</span> </h1>
+                <h1 class="lg:text-6xl text-[30px] font-extrabold text-white pt-[80px]">End-to-End Travel with <br> <span class="text-[#1DD100]">NEXUS TRAVELS</span> </h1>
                 <p class="lg:w-[600px] mx-auto text-white text-base font-medium">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
-                <button class="btn bg-[#1DD100] border-none text-[20px] font-semibold text-black"><a href="#triket-now">Buy Tickets</a></button>
+                <button class="btn bg-[#1DD100] border-none text-[20px] font-semibold text-black"><a href="#triket-now">Buy Tickets Now</a></button>
             </div>
           </div>
           <div class="lg:flex items-center justify-around lg:relative lg:bottom-[70px]">
@@ -77,9 +77,9 @@
                 </div>
             </div>
           </div>
-          <!-- banner end  -->
+          
     </header>
-    <!-- header area section end  -->
+    
 
     <!-- main area section   -->
     <main class="px-2">
@@ -91,7 +91,7 @@
                     <div class="space-y-3">
                         <h3 class="lg:text-5xl text-lg  font-bold">15% OFF</h3>
                         <h5 class="lg:text-xl text-lg  font-bold">on your next purchase</h5>
-                        <p class="text-xs font-bold ">use by January 2024</p>
+                        <p class="text-xs font-bold ">use by January 2025</p>
                     </div>
                     <img src="./images/cupon-devider.png" alt="" class="mr-2">
                     <div class="">
@@ -104,7 +104,7 @@
                     <div class="space-y-3">
                         <h3 class="lg:text-5xl text-lg  font-bold">20% OFF</h3>
                         <h5 class="lg:text-xl text-lg  font-bold">on your next purchase</h5>
-                        <p class="text-xs font-bold ">use by January 2024</p>
+                        <p class="text-xs font-bold ">use by January 2025</p>
                     </div>
                     <img src="./images/cupon-devider.png" alt="" class="">
                     <div class="">
