js problem fixed

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="mb-5 bg-[url('./images/banner.png')] bg-no-repeat bg-center bg-cover h-[550px] rounded-2xl">
             <div class="text-center space-y-6">
                 <h1 class="lg:text-6xl text-[30px] font-extrabold text-white pt-[80px]">End-to-End Travel with <br> <span class="text-[#1DD100]">NEXUS TRAVELS</span> </h1>
-                <p class="lg:w-[600px] mx-auto text-white text-base font-medium">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
+                <p class="lg:w-[600px] mx-auto text-white text-base font-medium">Experience seamless journeys with Nexus Travels - Where every mile is a moment of comfort and reliability</p>
                 <button class="btn bg-[#1DD100] border-none text-[20px] font-semibold text-black"><a href="#triket-now">Buy Tickets Now</a></button>
             </div>
           </div>
@@ -114,16 +114,16 @@
                 </div>
             </div>
             <div class="text-center my-5">
-                <button class="mt-5 btn text-[#1DD100] outline outline-[#1DD100] font-semibold">See All Offers</button>
+                <button class="mt-5 btn text-[#1DD100] outline outline-[#1DD100] font-semibold">See Our All Offers</button>
             </div>
         </section>
-        <!-- copupon section end -->
-        <!-- triket area section start  -->
+        
+        <!-- ticket area section start  -->
         <section class="px-2">
             <div class="rounded-t-xl border-t border-[#1DD100] mt-[50px]">
                 <div class="text-center mt-10 lg:w-[600px] mx-auto space-y-2">
-                    <h1 class="text-xl font-bold text-black">B-Paribahan</h1>
-                    <p class="text-base font-medium">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
+                    <h1 class="text-xl font-bold text-black">NEXUS TRAVELS</h1>
+                    <p class="text-base font-medium">Embark on unforgettable adventures with Nexus Travels - Your passport to unparalleled comfort and exploration.</p>
                 </div>
             </div>
             <div class="lg:flex items-center mt-10 ">
@@ -132,8 +132,8 @@
                         <div class="flex items-center gap-2">
                             <img src="./images/bus-logo.png" alt="">
                             <div>
-                            <h5 class="text-xl font-semibold text-black">Greenline Paribahan</h5>
-                            <p class="text-base font-medium text-black">Coach-009-WEB ! AC_Business</p>
+                            <h5 class="text-xl font-semibold text-black">Nexus Express</h5>
+                            <p class="text-base font-medium text-black">Coach-009-WEB | AC Coach | Business Class</p>
                             </div>
                         </div>
                         <div class="lg:flex items-center gap-2 btn">
@@ -162,8 +162,8 @@
                     </div>
                     <hr class="border-b border-dashed">
                     <div class=" space-y-3">
-                        <button class="btn mr-7">Boarding Point - Laxmipur</button>
-                        <button class="btn mr-7">Dropping Point - Bogura</button>
+                        <button class="btn mr-7">Boarding Point - DHAKA</button>
+                        <button class="btn mr-7">Dropping Point - SYLHET</button>
                         <button class="btn mr-7">Est. Time - 11 Hour</button>
                     </div>
                 </div>
@@ -400,12 +400,12 @@
     <footer class="bg-[#030712] lg:h-[300px] mt-[50px]">
         <div class="lg:flex justify-between items-center p-10">
             <div class="space-y-5">
-                <h2 class="lg:text-3xl text-xl font-medium lg:font-bold text-white cursor-pointer">B-Paribahan</h2>
-                <p class="lg:text-xl text-gray-300">B-Paribahan is a digital platform to make your <br> daily commuting better.</p>
+                <h2 class="lg:text-3xl text-xl font-medium lg:font-bold text-white cursor-pointer">NEXUS TRAVELS</h2>
+                <p class="lg:text-xl text-gray-300">Nexus Travels is a digital platform to make your <br> daily commuting better.</p>
             </div>
             <br>
             <div class=" space-y-5">
-                <h4 class="text-xl font-medium text-white">Download our app</h4>
+                <h4 class="text-xl font-medium text-white">Download Our Mobile app</h4>
                <p class="flex items-center text-white gap-3"> <img src="./images/playstore.png" alt="img" class="cursor-pointer"> Google Play Store</p>
             </div>
         </div>
@@ -414,7 +414,7 @@
         </div>
         <div class="flex  lg:justify-between lg:items-center p-10">
             <div class="space-y-5">
-                <p class="lg:text-base lg:font-medium text-gray-300">@all rights reserved, B-Paribahan services limited.2024</p>
+                <p class="lg:text-base lg:font-medium text-gray-300">@all rights reserved, Nexus Travels services limited.2024</p>
             </div>
             <br>
             <div class="flex justify-center items-center">
