--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     </div>
                     <hr class="border-b border-dashed">
                     <div class="flex justify-end">
-                        <button class="btn"><img src="./images/steering-wheel.png" alt=" images" class="w-8"></button>
+                        <button class="btn"><img src="images/Vector.png" alt=" images" class="w-8"></button>
                     </div>
                     <div class="lg:flex justify-between">
                        <div class="lg:flex justify-between gap-5">
