--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@
                         </div>
                     </div>
                     <div class="">
-                        <label for="" class="text-base font-medium">Passenger Name*</label>
+                        <label for="" class="text-base font-medium">Passenger Name<span class="text-red-600 text-[25px]">*</span></label>
                         <input type="text" name="" id="" placeholder="Enter your name" class="lg:w-[380px] w-[350px] h-[40px] border-2 border-gray-200 pl-2 outline-none">
-                        <label for="" class="text-base font-medium">Phone Number*</label>
+                        <label for="" class="text-base font-medium">Phone Number<span class="text-red-600 text-[25px]">*</span></label>
                         <input type="number" name="" id="number-phone" placeholder="Enter your phone number" class="lg:w-[380px] w-[350px] h-[40px] border-2 border-gray-200 pl-2 outline-none">
                         <label for="" class="text-base font-medium">Email ID</label>
                         <input type="email" name="" id="" placeholder="Enter your email id" class="lg:w-[380px] w-[350px] h-[40px] border-2 border-gray-200 pl-2 outline-none">
